data/derived/fa15/progs/unify/prog2827.ml.out
Characters 72-73:
  let fixpoint (f,b) = wwhile (let n x = let xx = f in (f , b < f b) in n,b);;
                                                                          ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
